<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.se491.chef_ly.activity.create_recipe_fragments.SecondFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fragTitle"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/recipeTime"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/recipeTime"
            android:inputType="number"
            android:textSize="22sp"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/recipeServings"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/recipeServings"
            android:inputType="number"
            android:textSize="22sp"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/recipeCategories"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/recipeCategories"
            android:hint="@string/categoryHint"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textSize="22sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
