<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/firstFrag"
    tools:context="com.se491.chef_ly.activity.create_recipe_fragments.FirstFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fragTitle"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/recipeName"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/recipeName"
            android:inputType="textAutoCorrect"
            android:textSize="22sp"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/author"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/recipeAuthor"
            android:inputType="textAutoCorrect"
            android:textSize="22sp"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/recipeImage"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/recipeImage"
            android:inputType="textUri"
            android:textSize="22sp"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/recipeDescription"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/recipeDescription"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textSize="22sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
