<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activityContactUs"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingStart="25dp"
android:paddingEnd="25dp"
android:background="@color/background_light"
tools:context="com.se491.chef_ly.activity.nav_activities.ContactUsActivity">

    <TextView
        android:id="@+id/contact"
        android:text="@string/contactus"
        android:textSize="40sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:id="@+id/your_id"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/contact"
        />

    <TextView
        android:id="@+id/emailtext"
        android:text="@string/emailtext"
        android:autoLink="email"
        android:textSize="17sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/your_id"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:id="@+id/webtext"
        android:text="@string/webtext"
        android:autoLink="web"
        android:textSize="17sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtext"
        android:layout_alignParentStart="true"
        android:layout_marginTop="106dp" />
</RelativeLayout>