<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cuttingboard"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.se491.chef_ly.activity.MainActivity">

    <TextView
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp" />
    
    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/username"
        android:inputType="textAutoComplete"
        android:hint="@string/username"
        android:textColorHint="@color/lightGray"
        android:background="@color/white"
        android:layout_below="@id/signin"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/lightGray"
        android:background="@color/white"
        android:layout_below="@id/username"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signInBtn"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:background="@color/btnGray"
        android:layout_alignEnd="@id/password"
        android:layout_below="@id/password"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <RelativeLayout
        android:layout_below="@id/signInBtn"
        android:layout_alignStart="@id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/continueAsGuest"
            android:text="@string/continueAsGuest"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHighlight="#EF33BB"
            android:clickable="true"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/or"
            android:text="@string/or"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/continueAsGuest"/>
        <TextView
            android:id="@+id/signUp"
            android:text="@string/signUp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHighlight="#EF33BB"
            android:clickable="true"
            android:padding="5dp"
            android:layout_below="@id/or"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>



</RelativeLayout>
