<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cuttingboard"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.se491.chef_ly.activity.RegisterActivity">

    <TextView
        android:id="@+id/registerTitle"
        android:text="@string/registerPageTitle"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/registerInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTitle"
        android:text="@string/enterUserEmail"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/registerInput"
        android:inputType="textAutoComplete"
        android:textColorHint="@color/lightGray"
        android:background="@color/white"
        android:layout_below="@id/registerInstruction"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/registerButton"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@color/btnGray"
        android:layout_alignEnd="@id/registerInput"
        android:layout_below="@id/registerInput"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
